create-multi-az-vpc/CloudFormationVPCBuilder.yaml
#####################################################################
# CloudFormationVPCBuilder
#####################################################################
AWSTemplateFormatVersion: "2010-09-09"

#####################################################################
# Description
#####################################################################
Description:  This template deploys a VPC, across three Availability Zones, 
  with public and private subnets in each AZ.
  Public subnets have a default route to the Internet Gateway
  Each Public Subnet also has a NAT gateway, 
  Each Private Subnet has a default route to the corresponding NAT.

#####################################################################
# Metadata
#####################################################################
Metadata: 
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      - Label: 
          default: "Tagging Configuration"
        Parameters: 
          - ProjectName
      - Label: 
          default: "VPC CIDR Configuration"
        Parameters: 
          - VpcCIDR
      - Label: 
          default: "AZ and Subnet Configuration"
        Parameters: 
          - AvailabilityZone1
          - PublicSubnet1CIDR
          - PrivateSubnet1CIDR
          - AvailabilityZone2
          - PublicSubnet2CIDR
          - PrivateSubnet2CIDR
          - AvailabilityZone3
          - PublicSubnet3CIDR
          - PrivateSubnet3CIDR

#####################################################################
# Parameters
#####################################################################
Parameters:
  ProjectName:
    Description: Project name is prefixed to resource names
    Type: String
    Default: VPCBuilder

  VpcCIDR:
    Description: IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.1.0.0/16

  AvailabilityZone1:
    Description: Availability Zone name for the first set of subnets
    Type: AWS::EC2::AvailabilityZone::Name

  AvailabilityZone2:
    Description: Availability Zone name for the second set of subnets
    Type: AWS::EC2::AvailabilityZone::Name

  AvailabilityZone3:
    Description: Availability Zone name for the third set of subnets
    Type: AWS::EC2::AvailabilityZone::Name

  PublicSubnet1CIDR:
    Description: IP range (CIDR notation) for Public subnet in the first AZ
    Type: String
    Default: 10.1.1.0/24

  PublicSubnet2CIDR:
    Description: IP range (CIDR notation) for Public subnet in the second AZ
    Type: String
    Default: 10.1.2.0/24

  PublicSubnet3CIDR:
    Description: IP range (CIDR notation) for Public subnet in the third AZ
    Type: String
    Default: 10.1.3.0/24

  PrivateSubnet1CIDR:
    Description: IP range (CIDR notation) for Private subnet in the first AZ
    Type: String
    Default: 10.1.51.0/24

  PrivateSubnet2CIDR:
    Description: IP range (CIDR notation) for Private subnet in the second AZ
    Type: String
    Default: 10.1.52.0/24

  PrivateSubnet3CIDR:
    Description: IP range (CIDR notation) for Private subnet in the third AZ
    Type: String
    Default: 10.1.53.0/24

#####################################################################
# Resources
#####################################################################
Resources:
  # When CloudFormation builds a VPC, it also automatically builds 
  # a default Security Group, a default NACL & a default Route Table
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-igw

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Ref AvailabilityZone1
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-subnet-public1-${AvailabilityZone1}

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Ref AvailabilityZone2
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-subnet-public2-${AvailabilityZone2}

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Ref AvailabilityZone3
      CidrBlock: !Ref PublicSubnet3CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-subnet-public3-${AvailabilityZone3}

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Ref AvailabilityZone1
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-subnet-private1-${AvailabilityZone1}

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Ref AvailabilityZone2
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-subnet-private2-${AvailabilityZone2}

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Ref AvailabilityZone3
      CidrBlock: !Ref PrivateSubnet3CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-subnet-private3-${AvailabilityZone3}

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway3EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-nat-public1-${AvailabilityZone1}

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-nat-public2-${AvailabilityZone2}

  NatGateway3:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway3EIP.AllocationId
      SubnetId: !Ref PublicSubnet3
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-nat-public3-${AvailabilityZone3}

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-rtb-public

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet3

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-rtb-private1

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-rtb-private2

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  PrivateRouteTable3:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub Project ${ProjectName}-rtb-private3

  DefaultPrivateRoute3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable3
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway3

  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable3
      SubnetId: !Ref PrivateSubnet3

#####################################################################
# Outputs
#####################################################################
Outputs:
  VPC:
    Description: VPC created
    Value: !Ref VPC

  PublicSubnet1:
    Description: Public subnet in the 1st AZ
    Value: !Ref PublicSubnet1

  PublicSubnet2:
    Description: Public subnet in the 2nd AZ
    Value: !Ref PublicSubnet2

  PublicSubnet3:
    Description: Public subnet in the 3rd AZ
    Value: !Ref PublicSubnet3

  PrivateSubnet1:
    Description: Private subnet in the 1st AZ
    Value: !Ref PrivateSubnet1

  PrivateSubnet2:
    Description: Private subnet in the 2nd AZ
    Value: !Ref PrivateSubnet2

  PrivateSubnet3:
    Description: Private subnet in the 3rd AZ
    Value: !Ref PrivateSubnet3
